--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "start": "webpack-dev-server"
   },
   "dependencies": {
+    "@shopify/draggable": "^1.0.0-beta.3",
     "http-server": "^0.10.0",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.4"
