--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "mocking-frog",
   "version": "0.0.1",
   "scripts": {
-    "build": "webpack",
+    "build": "tsc",
     "dev": "webpack-dev-server -w",
-    "prepare": "webpack"
+    "prepare": "tsc"
   },
-  "main": "dist/bundle.js",
+  "main": "dist/index.js",
   "dependencies": {
     "@shopify/draggable": "^1.0.0-beta.3",
     "http-server": "^0.10.0",
