--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "mocking-frog",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "scripts": {
     "build": "tsc",
     "dev": "webpack-dev-server -w",
     "prepare": "tsc"
   },
-  "main": "dist/index.js",
+  "main": "dist/src/index.js",
   "dependencies": {
     "@shopify/draggable": "^1.0.0-beta.3",
     "http-server": "^0.10.0",
