--- a/package.json
+++ b/package.json
@@ -1,17 +1,13 @@
 {
   "name": "mocking-frog",
-  "version": "0.0.2",
+  "version": "0.0.4",
   "scripts": {
-    "build": "tsc",
-    "dev": "webpack-dev-server -w",
-    "prepare": "tsc"
+    "dev": "cd test && webpack-dev-server",
+    "build": "tsc"
   },
-  "main": "dist/src/index.js",
+  "main": "dist/index.js",
   "dependencies": {
-    "@shopify/draggable": "^1.0.0-beta.3",
-    "http-server": "^0.10.0",
-    "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.4"
+    "@shopify/draggable": "^1.0.0-beta.3"
   },
   "devDependencies": {
     "awesome-typescript-loader": "^3.3.0",
