--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
   "name": "mocking-frog",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "scripts": {
     "dev": "tsc -w",
     "build": "tsc"
   },
   "main": "dist/index.js",
-  "dependencies": {
-    "@shopify/draggable": "^1.0.0-beta.3"
-  },
+  "dependencies": {},
   "devDependencies": {
     "awesome-typescript-loader": "^3.3.0",
     "source-map-loader": "^0.2.3",
