--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "mocking-frog",
-  "version": "0.0.9",
+  "version": "0.1.0",
   "scripts": {
     "dev": "tsc -w",
     "build": "tsc"
   },
   "main": "dist/index.js",
-  "dependencies": {},
+  "dependencies": {
+    "md5": "^2.2.1"
+  },
   "devDependencies": {
     "awesome-typescript-loader": "^3.3.0",
     "source-map-loader": "^0.2.3",
